<resources>

    //Content Authority
    <string name="content_authority">jhernandez.gameclock.sqlite.provider</string>

    //Settings Menu Strings
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>

    //Main Menu Strings
    <string name="app_name">GameClock</string>
    <string name="main_title">Main Menu</string>
    <string name="main_tutorial">Tutorial</string>
    <string name="main_alarms">Alarms</string>
    <string name="title_activity_saves">AlarmMenuActivity</string>
    <string name="hello_world">Hello world!</string>


    //Saved Alarm Times
    <string name="alarms_title">Manage Alarms</string>
    <string name="alarm1">New Alarm</string>
    <string name="alarm2">New Alarm</string>
    <string name="alarm3">New Alarm</string>
    <string name="alarm4">New Alarm</string>
    <string name="alarm5">New Alarm</string>
    <string name="title_activity_create_alarm">CreateAlarmActivity</string>

    //Create Alarm
    <string name="new_alarm_name">Name of Alarm</string>
    <string name="name_alarm_hint">Name your Alarm</string>
    <string name="alarm_active">Active</string>
    <string name="toggle_clock">24Hrs</string>
    <string name="am_pm">AmPm</string>




    //Preference Keys
    <string name="time_picker">tpKey</string>
    <string name="time_format_key">timeFormatKey</string>
    <string name="clock_type_key">clockTypeKey</string>
    <string name="alarm_name_key">alarmNameKey</string>
    <string name="repeating_alarm">Repeating</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="title_activity_game_screen">GameScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_alarm_list">Game Clock</string>
    <string name="title_activity_edit_create_alarm">EditCreateAlarm</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="title_activity_game_bridge">game_bridge</string>
    <string name="title_activity_edit_alarm">Edit Create Alarm</string>
</resources>
