<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    tools:context=".AlarmMenuActivity">

    <TextView android:id="@+id/main_menu"
        android:text="@string/alarms_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginBottom="47dp" />

    <Button
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alarm1"
        android:id="@+id/alarm1"
        android:layout_marginBottom="47dp" />
    <Button
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alarm2"
        android:id="@+id/alarm2"
        android:layout_marginBottom="47dp" />
    <Button
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alarm3"
        android:id="@+id/alarm3"
        android:layout_marginBottom="47dp" />
    <Button
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alarm4"
        android:id="@+id/alarm4"
        android:layout_marginBottom="47dp" />
    <Button
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alarm5"
        android:id="@+id/alarm5" />


</LinearLayout>
