<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <jhernandez.gameclock.alarm.creation.TimePreference
        android:name="Pick a Time"
        android:key="@string/time_picker" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="name"
        android:title="@string/new_alarm_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:defaultValue="Alarm"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <MultiSelectListPreference
        android:name="Repeating"
        android:id="@+id/repeating_alarm"
        android:title="@string/repeating_alarm"
        android:key="repeating"
        android:entries="@array/days_of_week"
        android:entryValues="@array/days_entries"
        android:defaultValue="@array/days_of_week"/>

    <!--<CheckBoxPreference-->
    <!--android:name="time_format"-->
    <!--android:title="Time format"-->
    <!--android:summary="12 Hour format"-->
    <!--android:defaultValue="true"-->
    <!--android:key="@string/time_format_key"-->
    <!--/>-->
</PreferenceScreen>
